Fixed issue with scrollbar during animations

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -18,6 +18,11 @@ body {
     color: $body-color;
 }
 
+.fullscreen {
+    /* To prevent scrollbar to appear when sidemenu animations are playing */
+    overflow: hidden;
+}
+
 .window-container {
     width: 100%;
     height: 100vh;
